--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,3 +1,6 @@
+1.4.0 (2016080106)
+Enhancement: Added preview thumbnails to recordings.
+
 1.3.1 (2016051905)
 Bug: Fixed bug in YUI datatable showing a blank page. The bug was affecting users who make use of a language package with sub code (e.g. en_CA, es_MX)
 Bug: Fixed issue with deprecated function called by the view
